--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-numpy
-numpy-financial
-matplotlib
-fpdf=1.7
-Pillow
-forex-python
-yfinance
+streamlit>=1.0
+pandas>=1.0
+numpy>=1.18
+numpy-financial>=1.0
+matplotlib>=3.0
+fpdf>=1.7
+Pillow>=8.0
+forex-python>=1.0
+yfinance>=0.1
