--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.0
-pandas>=1.0
-numpy>=1.18
-numpy-financial>=1.0
-matplotlib>=3.0
-fpdf>=1.7
-Pillow>=8.0
-forex-python>=1.0
-yfinance>=0.1
+streamlit==1.25.0
+pandas==2.1.1
+numpy==1.26.0
+numpy-financial==1.0.0
+matplotlib==3.8.0
+fpdf==1.7.2
+Pillow==10.0.0
+forex-python==1.8
+yfinance==0.2.31
